# TDD-PROJECT

./: .env  pyproject.toml
store/: main.py
store/core/: config.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/schemas/: base.py  product.py  test_product.py
tests/usecases/: test_product.py
