[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Jefferson Andrade <https://github.com/jeromario>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.7"
motor = "^3.4.0"
pre-commit = "^3.7.1"
uvicorn = "^0.30.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
